--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "preview": "vite preview --host"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.9.0",
     "@imgly/background-removal": "^1.7.0",
@@ -54,6 +57,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
@@ -77,6 +81,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/html2canvas": "^0.5.35",
     "@types/node": "^22.5.5",
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18.3.3",
