fix: resolve ModuleNotFoundError in GitHub Actions workflows
All workflows now run from repo root using 'python -m trend_engine.*'
instead of 'cd trend_engine && python script.py', which broke imports.

- weekly-recap.yml: python -m trend_engine.jobs.weekly_recap
- daily-trend-radar.yml: python -m trend_engine.main --run
- daily_pipeline.yml: python -m trend_engine.main --run

--- a/.github/workflows/daily-trend-radar.yml
+++ b/.github/workflows/daily-trend-radar.yml
@@ -21,8 +21,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd trend_engine
-          pip install -r requirements.txt
+          pip install -r trend_engine/requirements.txt
 
       - name: Install Playwright browsers
         run: |
@@ -35,8 +34,7 @@ jobs:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
         run: |
-          cd trend_engine
-          python main.py --run
+          python -m trend_engine.main --run
 
       - name: Notify on failure
         if: failure()
