--- a/.github/workflows/daily_pipeline.yml
+++ b/.github/workflows/daily_pipeline.yml
@@ -23,6 +23,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r trend_engine/requirements.txt
 
+      - name: Install Playwright browsers
+        run: playwright install chromium --with-deps
+
       - name: Run Trend Pipeline
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
